--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
             </hr>
             <div class="inspiration__item">
                 <p class="inspiration__text">Když jsem začala tvořit své první weby, začala jsem si více všímat
-                    osobností ze světa IT a toho, čeho dosáhli.
+                    osobností ze světa IT a toho, čeho dosáhly.
                     Skvělým příkladem je <a class="cascadia link" href="https://cs.wikipedia.org/wiki/Josef_Pr%C5%AF%C5%A1a_(v%C3%BDvoj%C3%A1%C5%99)" target="_blank">Josef Průša</a>. Ve svých devatenácti letech
                     tvořil první prototypy jeho 3D
                     tiskáren a nyní je jeho firma druhý největší výrobce 3D tiskáren na světě.
